added encription to password

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5001
 
-MONGO_URL = mongodb+srv://jobhub:jobhubdb@devowl.7trgji4.mongodb.net/ 
+MONGO_URL = mongodb+srv://jobhub:jobhubdb@devowl.7trgji4.mongodb.net/jobhubdb
+
+SECRET = jobhub2023
