--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PORT = 5001
 MONGO_URL = mongodb+srv://jobhub:jobhubdb@devowl.7trgji4.mongodb.net/jobhubdb
 
 SECRET = jobhub2023
+
+JWT_SEC = "secret"
