update to upload to glitch

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PORT = 5001
 
-MONGO_URL = mongodb+srv://jobhub:jobhubdb@devowl.7trgji4.mongodb.net/jobhubdb
+MONGO_URL = mongodb://jobhub:jobhubdb@ac-pp2ccld-shard-00-00.7trgji4.mongodb.net:27017,ac-pp2ccld-shard-00-01.7trgji4.mongodb.net:27017,ac-pp2ccld-shard-00-02.7trgji4.mongodb.net:27017/?ssl=true&replicaSet=atlas-116w9e-shard-0&authSource=admin&retryWrites=true&w=majority
+# MONGO_URL = mongodb+srv://jobhub:jobhubdb@devowl.7trgji4.mongodb.net/jobhubdb
 
 SECRET = jobhub2023
 
-JWT_SEC = "secret"
+JWT_SEC = jobhub2023
